[package]
name = "puppetstuff"
version = "0.3.0"
edition = "2021"
authors = ["svalouch <54674660+svalouch@users.noreply.github.com.>"]
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["puppet"]
categories = ["command-line-utilities","visualization"]

[dependencies]
attohttpc = { version = "0.28.0", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde", "std"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
comfy-table = { version = "7.1.3", features = ["custom_styling"] }
git2 = { version = "0.20.0", default-features = false }
regex = "1.11.1"
semver = "1.0.23"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shellexpand = "3.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
